# fastapi_sample

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yaml  main.py  models.py  pyproject.toml  requirements.txt  schemas.py
$HOME/Developer/go/pkg/sumdb/sum.golang.org/: latest
alembic/: env.py
alembic/versions/: 62e7b3e4e22a_create_table_events.py  b6547a90f070_update_column_in_events_model.py
api/: events.py
db/: db_setup.py
operations/: events.py
test/: conftest.py  db_setup.py  test_event.py  test_main.py
