[tool.poetry]
name = "fastapi-sample"
version = "0.1.0"
description = ""
authors = ["Guillaume Maka <guillaume.maka@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
alembic = "^1.12.0"
fastapi = "^0.104.0"
sqlalchemy = "^2.0.22"
uvicorn = "^0.23.2"
pytest = "^7.4.3"
psycopg2-binary = "^2.9.9"
asyncpg = "^0.28.0"
greenlet = "^3.0.1"
pytest-watch = "^4.2.0"
httpx = "^0.25.0"
pytest-spec = "^3.2.0"
faker = "^19.12.0"
pytest-faker = "^2.0.0"
pytest-anyio = "^0.0.0"
pytest-asyncio = "^0.21.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = ["."]